@@ -3,6 +3,8 @@
 #include <stdint.h>
 #include "lua.hpp"
 #include <string>
+#include <vector>
+
 class Logger;
 #pragma pack(push,1)
 class World
@@ -15,6 +17,23 @@ public:
 		void* entityptr;
 		int16_t unknown_1;
 		int16_t unknown_2;
+	};
+
+	struct PlayerFOTLinkedList
+	{
+		PlayerFOTLinkedList* next;
+		PlayerFOTLinkedList* prev;
+		uint16_t flags;
+		uint16_t entity_id;
+
+	};
+
+	struct PlayerFOTObject
+	{
+		uint32_t vtable;
+		char unknown_1[0x47];
+		PlayerFOTLinkedList* players;
+		char unknown_2[0x10e];
 	};
 
 	struct WorldFOTObject
@@ -34,8 +53,8 @@ public:
 		char skip2[4];
 
 		char unknown_2[0x38d];
-		void* ptrPlayerList;
-		void* ptrPlayerListEnd;
+		PlayerFOTObject* ptrPlayerList;
+		PlayerFOTObject* ptrPlayerListEnd;
 		char unknown_3[8];
 		EntityTable* entityStart;
 		EntityTable* entityEnd;
@@ -43,6 +62,7 @@ public:
 	};
 	static WorldFOTObject* GetGlobal();
 	static void* GetEntity(uint16_t id);
+	static std::vector<uint16_t> GetSquad();
 	static void RegisterLua(lua_State* l,Logger* logger);
 	static void SetVariable(std::string const& key, std::string const& value, bool campaign);
 
@@ -52,6 +72,7 @@ public:
 private:
 	static const uint32_t WORLD_GLOBAL_PTR = 0x8bc564;
 	static const uint32_t FXN_WORLD_SETVARIABLE = 0x67ee30;
+	static const uint32_t ACTOR_VTABLE = 0x80c1d0;
 
 	// DummyClass is used whenever we call a FoT function which requires
 	// the "this" pointer be set.  We override both the this pointer and
