@@ -1,3 +1,4 @@
+* Added world:GetPlayer and world:GetSquad
 * Added support for getting and setting mission and campaign flags
 
 0.21a: July 5, 2018
